# hello-cpp

./: .gitignore  README.md
.github/workflows/: test.yml
docs/: cpp_notes.md  cpp_template.md  readme.md  template.md
docs/vs_code/: vs_code.md
main_challenge/hello_cpp_cmake/: CMakeLists.txt  main.cpp
main_challenge/hello_cpp_cmake_thread/: CMakeLists.txt
main_challenge/hello_cpp_multimap/: main.cpp
main_challenge/hello_cpp_thread/: main.cpp
main_challenge/hello_cpp_thread_struct_detach/: main.cpp
main_challenge/main_challenge_effort_02_day_01/: main.cpp
main_challenge/main_challenge_effort_02_day_04/: main.cpp
main_challenge/main_challenge_effort_02_day_06/: main.cpp
main_challenge/main_challenge_effort_02_day_07/: main.cpp
main_challenge/main_challenge_effort_02_day_08/: main.cpp
main_challenge/main_challenge_effort_02_day_09/: main.cpp
main_challenge/main_challenge_effort_02_day_10/: main.cpp
main_challenge/main_challenge_effort_02_day_11/: main.cpp
main_challenge/main_challenge_effort_02_day_12/: main.cpp
main_challenge/main_challenge_effort_02_day_13/: main.cpp
main_challenge/main_challenge_effort_02_day_14/: main.cpp
main_challenge/main_challenge_effort_02_day_15/: main.cpp
main_challenge/main_challenge_effort_02_day_16/: main.cpp
main_challenge/main_challenge_effort_02_day_17/: foo.bat  main.cpp
main_challenge/main_challenge_effort_02_day_18/: CMakeLists.txt  main.cpp  setup.bat
main_challenge/main_challenge_effort_02_day_19/: main.cpp  setup.bat
main_challenge/main_challenge_effort_02_day_20/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_02_day_21/: main.cpp
main_challenge/main_challenge_effort_02_day_22/: main.cpp
main_challenge/main_challenge_effort_02_day_23/: main.cpp
main_challenge/main_challenge_effort_02_day_24/: main.cpp
main_challenge/main_challenge_effort_02_day_25/: main.cpp
main_challenge/main_challenge_effort_02_day_26/: main.cpp
main_challenge/main_challenge_effort_02_day_27/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_02_day_28/: main.cpp
main_challenge/main_challenge_effort_02_day_29/: main.cpp
main_challenge/main_challenge_effort_02_day_30/: main.cpp
main_challenge/main_challenge_effort_02_day_31/: main.cpp
main_challenge/main_challenge_effort_02_day_32/: main.cpp
main_challenge/main_challenge_effort_02_day_33/: CMakeLists.txt  Main.cpp
main_challenge/main_challenge_effort_03_day_01/: main.cpp
main_challenge/main_challenge_effort_03_day_02/: CMakeLists.txt  main.cpp  stack.cpp  stack.hpp
main_challenge/main_challenge_effort_03_day_03/: main.cpp
main_challenge/main_challenge_effort_03_day_04/: ThreadsafeStack.hpp  main.cpp
main_challenge/main_challenge_effort_04_day_01/: CMakeLists.txt  ThreadsafeStack.hpp  main.cpp
main_challenge/main_challenge_effort_04_day_02/: main.cpp
main_challenge/main_challenge_effort_04_day_03/: main.cpp
main_challenge/main_challenge_effort_04_day_04/: CMakeLists.txt  main.cpp  setup.bat
main_challenge/main_challenge_effort_04_day_05/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_05_day_01/: main.cpp
main_challenge/main_challenge_effort_05_day_02/: main.cpp
main_challenge/main_challenge_effort_05_day_03/: main.cpp
main_challenge/main_challenge_effort_06_day_01/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_06_day_02/: main.cpp
main_challenge/main_challenge_effort_07_day_01/: main.cpp
main_challenge/main_challenge_effort_07_day_02/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_07_day_03/: main.cpp
main_challenge/main_challenge_effort_07_day_04/: main.cpp
main_challenge/main_challenge_effort_07_day_05/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_07_day_06/: main.cpp  setup.bat
main_challenge/main_challenge_effort_07_day_07/: main.cpp
main_challenge/main_challenge_effort_07_day_08/: main.cpp
main_challenge/main_challenge_effort_07_day_09/: main.cpp
main_challenge/main_challenge_effort_07_day_10/: main.cpp
main_challenge/main_challenge_effort_07_day_11/: main.cpp
main_challenge/main_challenge_effort_07_day_12/: main.cpp
main_challenge/main_challenge_effort_07_day_13/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_07_day_14/: README.md  main.cpp
main_challenge/main_challenge_effort_07_day_15/: main.cpp  setup.bat
main_challenge/main_challenge_effort_07_day_16/: README.md  main.cpp  setup.bat
main_challenge/main_challenge_effort_07_day_17/: README.md  main.cpp  setup.bat
main_challenge/main_challenge_effort_08_day_01/: CMakeLists.txt  main.cpp  setup.bat
main_challenge/main_challenge_effort_08_day_02/: CMakeLists.txt  main.cpp  setup.bat
main_challenge/main_challenge_effort_08_day_03/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_08_day_04/: CMakeLists.txt  main.cpp  setup.bat
main_challenge/main_challenge_effort_08_day_06/: CMakeLists.txt  main.cpp  setup.bat
main_challenge/main_challenge_effort_09_day_01/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_09_day_02/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_09_day_03/: CMakeLists.txt  main.cpp  setup.bat
main_challenge/main_challenge_effort_09_day_04/: CMakeLists.txt  main.cpp  setup.bat
main_challenge/main_challenge_effort_13_day_01/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_13_day_02/: CMakeLists.txt  main.cpp  setup.bat
main_challenge/main_challenge_effort_13_day_04/: CMakeLists.txt  main.cpp  readme.md
main_challenge/main_challenge_effort_13_day_06/: CMakeLists.txt  main.cpp  setup.bat
main_challenge/main_challenge_effort_13_day_08/: CMakeLists.txt  main.cpp
main_challenge/main_challenge_effort_14_day_01/: CMakeLists.txt  test.cpp  test.hpp
main_challenge/main_challenge_feffort_001/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp  test.cpp
main_challenge/main_challenge_feffort_002/: CMakeLists.txt  hello.cpp  hello.hpp  main.cpp  setup.bat
main_challenge/main_challenge_feffort_002/hello/: CMakeLists.txt  hello.cpp
(+59 files in other folders)
