cmake_minimum_required(VERSION 4.0)
project(Hello)
file(GLOB SOURCES *.cpp *.hpp)
include_directories(c:/_development/sandbox/cpp/libs/SDL2-2.32.8/x86_64-w64-mingw32/include)
link_directories(c:/_development/sandbox/cpp/libs/SDL2-2.32.8/x86_64-w64-mingw32/lib)
set(CMAKE_CXX_STANDARD_LIBRARIES "-static-libgcc -static-libstdc++ -lwsock32 -lws2_32 ${CMAKE_CXX_STANDARD_LIBRARIES}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,-Bstatic,--whole-archive -lwinpthread -Wl,--no-whole-archive")
add_executable(main ${SOURCES})
target_link_libraries(main SDL2)